<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="number"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_title" />


    <ListPreference
        android:title="@string/pref_unit_title"
        android:entries="@array/pref_units_array"
        android:entryValues="@array/pref_units_key_array"
        android:key="@string/pref_unit_key"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>